# biosphere

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DEPENDENCY_UPDATE_SUMMARY.md  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
benches/: bench_argsort.rs  bench_forest.rs  bench_tree.rs  bench_tree_methods.rs  bench_utils.rs
biosphere-py/: Cargo.toml  asv.conf.json  benchmarks.py  environment.yml  manual_benchmarks.py  pyproject.toml  readme_benchmarks.py  results.csv
biosphere-py/benchmarks/: benchmark_forest.py  benchmark_tree.py  benchmarks.py  common.py  environment.yml  load.py
biosphere-py/biosphere/: __init__.py
biosphere-py/src/: decision_tree.rs  lib.rs  random_forest.rs  utils.rs
biosphere-py/tests/: test_biosphere.py
src/: argsort.rs  forest.rs  lib.rs  quick_sort.rs  testing.rs  tree.rs  utils.rs
src/tree/: criterion.rs  decision_tree.rs  decision_tree_node.rs  decision_tree_parameters.rs  mod.rs
testdata/: iris.csv
tests/: serde.rs  test_tree.rs
