[package]
name = "biosphere"
description = "Simple, fast random forests."
authors = ["Malte Londschien <malte@londschien.ch>"]
repository = "https://github.com/mlondschien/biosphere/"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2018"
exclude = ["/.github", "/changeforest-py", ".pre-commit-config.yml"]

[lib]
name = "biosphere"

[dependencies]
ndarray = "0.15.3"
rand = "0.8.4"

[profile.bench]
incremental = true
debug = true
lto = "fat"

[dev-dependencies]
rstest = "0.11.0"
ndarray-rand = "0.14.0"
csv = "^1"
ndarray-csv = "^0.5"
criterion = "0.3.0"

[[bench]]
name = "bench_utils"
harness = false

[[bench]]
name = "bench_forest"
harness = false

[[bench]]
name = "bench_tree"
harness = false