[package]
name = "biosphere"
description = "Simple, fast random forests."
authors = ["Malte Londschien <malte@londschien.ch>"]
repository = "https://github.com/mlondschien/biosphere/"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.4.0"
edition = "2021"
exclude = ["/.github", "/changeforest-py", ".pre-commit-config.yaml", ".gitignore"]
keywords = ["machine-learning", "random-forest", "decision-tree", "ensemble", "tree"]

[lib]
name = "biosphere"

[dependencies]
ndarray = "0.16.1"
rand = "0.8"
rayon = "1.10"

[profile.bench]
incremental = true
debug = true
lto = "fat"

[dev-dependencies]
rstest = "0.25"
ndarray-rand = "0.15"
csv = "^1"
ndarray-csv = "^0.5"
criterion = "0.5"
assert_approx_eq = "1.1"

[[bench]]
name = "bench_utils"
harness = false

[[bench]]
name = "bench_forest"
harness = false

[[bench]]
name = "bench_tree"
harness = false
