[package]
name = "biosphere_py"
version = "0.4.1"
edition = "2021"

[lib]
name = "biosphere"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "biosphere"

[dependencies]
numpy = "0.26"
biosphere = { path = "../" }
ndarray = "0.16"
pyo3 = {version = "0.26", features = ["extension-module"]}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json5 = { version = "0.2", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json5", "biosphere/serde"]