[package]
name = "biosphere_py"
version = "0.4.1"
edition = "2021"

[lib]
name = "biosphere"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "biosphere"

[dependencies]
numpy = "0.27.0"
biosphere = { path = "../" }
ndarray = "0.17.1"
pyo3 = {version = "0.27.1", features = ["extension-module"]}

[patch.crates-io]
numpy = { path = "../vendor/rust-numpy" }