[project]
name = "biosphere"
description = "Simple, fast random forests"
readme = "README.md"
version = "0.3.0"
requires-python = ">=3.7"
author = "Malte Londschien <malte@londschien.ch>"
urls = {homepage = "https://github.com/mlondschien/biosphere/"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python"
]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "biosphere"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.cibuildwheel]
test-requires = "numpy pytest"
test-command = "pytest {project}/biosphere-py/tests"

# macos arm64 wheels can be built on X86_64, but cannot be tested.
test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"

# Python 3.6 build are slooow. Possibly because we also compile numpy?
# pypi builds on macos require compilation of numpy (why?) and are thus super slow
# fail due to https://github.com/numpy/numpy/issues/15947.
# What is the difference between cpython and pypi builds?
# musllinux is sloooow, >1h per build. Why?
skip = "cp36-* pp*-macosx* pp* *-musllinux*"

# Add cargobin to PATH. This is otherwise achieved by restarting the shellThis 
environment = { PATH="$PATH:$HOME/.cargo/bin", CARGO_LOG=cargo::ops::registry=debug, CARGO_HTTP_DEBUG=true }

[tool.cibuildwheel.linux]
# Install rust in container before building wheels.
before-all = "pip install pip==22.0 && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y && yum install -y openssl-devel"

[[tool.cibuildwheel.overrides]]
# No yum on musllinux container.
# What is musllinux?
select = "*-musllinux*"
before-all = "apk add openssl-dev && curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"